Fix broken CSS for code blocks

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -93,7 +93,5 @@ pre {
 }
 
 code {
-  background-color: rgba(0, 0, 0, 0.04);
   padding: 0.09rem 0.125rem;
-  color: rgb(51, 51, 51);
 }
